--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.10+1
-  shared_preferences: ^2.2.3
+  shared_preferences: ^2.3.1
+  get_it: ^7.7.0
 
 dev_dependencies:
   flutter_test:
@@ -78,13 +79,13 @@ flutter:
     - family: Cairo
       fonts:
         - asset: assets/fonts/Cairo-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+        - asset: assets\fonts\Cairo-Medium.ttf
+          weight: 500
+        - asset: assets\fonts\Cairo-SemiBold.ttf
+          weight: 600
+        - asset: assets\fonts\Cairo-Bold.ttf
+          weight: 700
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
